--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-slick": "^0.30.2",
     "shadcn-ui": "^0.9.2",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
